syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "HelpCenter.GrpcServer";

package Ticket;

// The Ticketing service definition.
service Ticketer {
  rpc GetTicketByIds (TicketRequest) returns (TicketResult){};
  rpc GetTicketCheck (CheckRequest) returns (TicketCheckResult){};
  rpc GetTicketByField (FieldRequest) returns (TicketResult){};
  rpc GetTicketByBtachField (FieldBatchRequest) returns (TicketResult){};
}

message TicketRequest {
  repeated int32 ids=1;
}
message FieldRequest{
  string FieldId=1;
  string type=2;   //ORDER--订单ID  CHECKOUT---出库单ID  CHECKIN---入库单ID  EQUIPMENT--器材ID TRANSFER--调仓ID
}
message FieldBatchRequest{
  repeated  FieldRequest Request=1;
  google.protobuf.BoolValue IsField=2;
}
message TicketResult {
  int32 total = 1;
  repeated TicketModel data = 2;
}
message TicketModel {
  int32 ID=1;
  int32 Satisfaction=2;
  string SolvingTime=3;
  string DeadlineTime=4;
  string SolvedTime=5;
  string FinishedTime=6;
  string Priority=7;
  int32 IsValid=8;
  string Status=9;
  string Subject =10;
  string Content=11;
  int32  SceneID=12;
  int32 CategoryID=13;
  string CustomerID=14;
  string CustomerPhone=15;
  string CustomerEmail=16;
  string CustomerNotification=17;
  int32 AgentID=18;
  int32 AgentGroupID=19;
  string CreateTime=20;
  repeated FieldResult Fields=21;
  }

  message CheckRequest {
   string CheckCode=1;  /*出库单号  入库单ID*/
   repeated string OrderId=2;   /*订单ID*/
   int32    Type=3;    /*0--入库  1--出库**/
   repeated int32 TicketIds=4;  /*已知工单ID*/
  }

  message TicketCheckResult {
    int32 total = 1;
    repeated TicketCheck data = 2;
  }
  message TicketCheck {
   int32 TicketId=1;
   string Subject=2;
   string Status=3;
   string CheckId=4;
   string UniqueCode=5;
   string CreatorName=6;
   string CategoryName=7;
   int32 CategoryId=8;
   string CreateTime=9;
   repeated FieldResult Fields=10;
  }
  message FieldResult{
   int32 FieldId=1;
   string FieldName=2;
   string FieldValue=3;
  }
